--- a/preview.html
+++ b/preview.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="PowerlineFonts.css">
         <style>
             body { font-family: sans-serif; }
+            .MesloNerd { font-family: "Meslo LG M Regular Nerd Font Complete"; }
             .AnonymousPro { font-family: "Anonymous Pro"; }
             .DejaVuSansMono { font-family: "DejaVu Sans Mono"; }
             .Hack { font-family: "Hack"; }
@@ -21,6 +22,13 @@
     <body>
         <h1>wernight/powerline-web-fonts</h1>
         <h2>Examples:</h2>
+        <section class="MesloNerd">
+            <h3>Meslo LG M Regular Nerd Font Complete</h3>
+            abcdefghijklmnopqrstuvwxyz<br>
+            <b>abcdefghijklmnopqrstuvwxyz</b><br>
+            ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
+            "{[(0123456789)]}';+-=_%$,.
+        </section>
         <section class="AnonymousPro">
             <h3>Anonymous Pro</h3>
             abcdefghijklmnopqrstuvwxyz<br>
